--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"build": "next build",
 		"start": "next start",
 		"lint": "eslint",
-		"test": "jest"
+		"test": "jest",
+		"prepare": "husky install"
 	},
 	"dependencies": {
 		"next": "15.5.2",
@@ -24,6 +25,7 @@
 		"babel-jest": "^30.1.2",
 		"eslint": "^9",
 		"eslint-config-next": "15.5.2",
+		"husky": "^9.1.7",
 		"jest": "^30.1.3",
 		"jest-environment-jsdom": "^30.1.2",
 		"tailwindcss": "^4"
